--- a/index.html
+++ b/index.html
@@ -9,47 +9,54 @@
 </head>
 <body>
     <section class="top-banner">
-        <h1>Let's Help Those Who Are</h1>
-        <h1>More In Need</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, accusantium?</p>
-        <a href="www.google.com" target="_blank">Donate Now</a>
+       <div class="all-text">
+            <h1 id="slogan1">Let's Help Those Who Are</h1>
+            <h1 id="slogan2">More In Need</h1>
+            <p class="top-paragraph">Natural disasters are catastrophic events with atmospheric,and hydrological <br>(e.g., droughts, earthquakes, floods, hurricanes, landslides)</p>
+            <a class="link-button" href="www.google.com" target="_blank">Donate Now</a>
+       </div>
+    </section>
+    <section class="donate-section">
+        <h1 class="donate">Donate Today</h1>
+        <p class="donate-p">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur nisi illum molestias. Libero error tempore amet repellendus itaque quod pariatur!</p>
+        <div class="donate-case">
+            <h3 class="donate-amount">100tk</h3>
+            <h3 id="taka" class="donate-amount" >200tk</h3>
+            <h3 class="donate-amount">1000tk</h3>
+            <h3 class="donate-amount">500tk</h3>
+            <h3 class="donate-amount">5000tk</h3>
+        </div>
+        <div class="input-section">
+            <form action="" >
+                <input id="other-amount" type="number" placeholder="Other Amount (Taka)">
+            </form>
+            <hr>
+            <button id="donate-now" class="link-button"  value="Donate Now">Donate Now</button>
+        </div>
+       
     </section>
     <section>
-        <h1>Donate Today</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur nisi illum molestias. Libero error tempore amet repellendus itaque quod pariatur!</p>
-        <h3>100tk</h3>
-        <h3>200tk</h3>
-        <h3>500tk</h3>
-        <h3>1000tk</h3>
-        <h3>5000tk</h3>
-        <form action="">
-            <input type="number" placeholder="Other Amount (Taka)">
-        </form>
-        <hr>
-        <button value="Donate Now"></button>
-    </section>
-    <section>
-        <h1>Our Donate Plan</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima facilis vero cum obcaecati qui inventore officia iure laborum repudiandae eaque!</p>
-        <div>
-            <div>
-                <img src="img/" alt="">
+        <h1 class="plan">Our Donate Plan</h1>
+        <p class="donate-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima facilis vero <br> obcaecati qui inventore officia iure laborum repudiandae eaque!</p>
+        <div class="card-section">
+            <div class="card" id="card-1">
+                <img src="icons/food.png" alt="">
                 <h3>Food for a family</h3>
                 <p>Amet minim mollit non deserunt 
                     ullamco est sit aliqua dolor do amet 
                     sint. Velit officia consequat duis enim 
                     velit mollit.</p>
             </div>
-            <div>
-                <img src="" alt="">
+            <div class="card" id="card-2">
+                <img src="icons/shelter.png" alt="">
                 <h3>Shelter for a family</h3>
                 <p>Amet minim mollit non deserunt 
                     ullamco est sit aliqua dolor do amet 
                     sint. Velit officia consequat duis enim 
                     velit mollit.</p>
             </div>
-            <div>
-                <img src="" alt="">
+            <div class="card" id="card-3">
+                <img src="icons/Frame-1.png" alt="">
                 <h3>Education for a child</h3>
                 <p>Amet minim mollit non deserunt 
                     ullamco est sit aliqua dolor do amet 
@@ -58,40 +65,39 @@
             </div>
         </div>
     </section>
-    <section>
-        <div>
+    <section class="live">
+        <div class="half-width text" >
             <h1>Their lives depend on your donate</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae neque repellat vel eos perspiciatis minus eaque doloremque consectetur obcaecati rem.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, fuga?</p>
-            <a href="www.google.com" target="_blank">How to Contribute?</a>
+            <a class="link-button" href="www.google.com" target="_blank">How to Contribute?</a>
         </div>
-        <div>
-            <img src="" alt="">
+        <div class="half-width">
+            <img src="images/donation11.jpg" alt="">
         </div>
     </section>
     </section>
     <section>
-        
-        <div>
-            <img src="" alt="">
+            <div class="half-width">
+            <img src="images/donation12.png" alt="">
         </div>
-        <div>
+        <div class="half-width text">
             <h1>They need us to survive</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae neque repellat vel eos perspiciatis minus eaque doloremque consectetur obcaecati rem.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, fuga?</p>
-            <a href="www.google.com" target="_blank">How to Contribute?</a>
+            <a class="link-button" href="www.google.com" target="_blank">How to Contribute?</a>
         </div>
     </section>
-    <section>
+    <section class="updates">
         <h1>Get My Updates</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit porro quam deleniti eum eius tempore corporis earum iusto laudantium maiores.</p>
-        <form action="">
+        <form class="form" action="">
             <input type="email" placeholder="Email">
-            <button value="Subscribe"></button>
+            <button value="Subscribe">Subscribe</button>
         </form>
     </section>
 </body>
-<footer>
+<footer class="footer">
     <h2>Be Humble</h2>
     <p>I'm gonna do it</p>
 </footer>
