--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donate-today</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
     <section class="top-banner">
        <div class="all-text">
             <h1 id="slogan1">Let's Help Those Who Are</h1>
             <h1 id="slogan2">More In Need</h1>
-            <p class="top-paragraph">Natural disasters are catastrophic events with atmospheric,and hydrological <br>(e.g., droughts, earthquakes, floods, hurricanes, landslides)</p>
+            <p class="top-paragraph">Four million people, including 1.6 million children, stranded by flash floods in north-eastern Bangladesh are in urgent need of help.  <br>UNICEF is on the ground to protect children and to deliver emergency water and health supplies.</p>
             <a class="link-button" href="www.google.com" target="_blank">Donate Now</a>
        </div>
     </section>
     <section class="donate-section">
         <h1 class="donate">Donate Today</h1>
-        <p class="donate-p">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur nisi illum molestias. Libero error tempore amet repellendus itaque quod pariatur!</p>
+        <p class="donate-p">Children need safe drinking water right now. Preventing deadly waterborne diseases is one of several critical concerns,” said Mr. Sheldon Yett, UNICEF Representative to Bangladesh</p>
         <div class="donate-case">
             <h3 class="donate-amount">100tk</h3>
             <h3 id="taka" class="donate-amount" >200tk</h3>
@@ -37,39 +38,30 @@
     </section>
     <section>
         <h1 class="plan">Our Donate Plan</h1>
-        <p class="donate-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima facilis vero <br> obcaecati qui inventore officia iure laborum repudiandae eaque!</p>
+        <p class="donate-p">UNICEF has already dispatched 400,000 water purification tablets that can support 80,000 households with clean water for a week. UNICEF is working to further support the Government of Bangladesh’s emergency response with millions of water purification tablets</p>
         <div class="card-section">
             <div class="card" id="card-1">
                 <img src="icons/food.png" alt="">
                 <h3>Food for a family</h3>
-                <p>Amet minim mollit non deserunt 
-                    ullamco est sit aliqua dolor do amet 
-                    sint. Velit officia consequat duis enim 
-                    velit mollit.</p>
+                <p>Over 36,000 children have taken refuge in overcrowded shelters together with their families. Schools have been closed, and exams cancelled, </p>
             </div>
             <div class="card" id="card-2">
                 <img src="icons/shelter.png" alt="">
                 <h3>Shelter for a family</h3>
-                <p>Amet minim mollit non deserunt 
-                    ullamco est sit aliqua dolor do amet 
-                    sint. Velit officia consequat duis enim 
-                    velit mollit.</p>
+                <p>In Sylhet division, 90 per cent of health facilities have been inundated, while cases of waterborne diseases continue to rise.</p>
             </div>
             <div class="card" id="card-3">
                 <img src="icons/Frame-1.png" alt="">
                 <h3>Education for a child</h3>
-                <p>Amet minim mollit non deserunt 
-                    ullamco est sit aliqua dolor do amet 
-                    sint. Velit officia consequat duis enim 
-                    velit mollit</p>
+                <p>further hampering the education of children who already suffered an 18-months of pandemic school closure</p>
             </div>
         </div>
     </section>
     <section class="live">
         <div class="half-width text" >
             <h1>Their lives depend on your donate</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae neque repellat vel eos perspiciatis minus eaque doloremque consectetur obcaecati rem.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, fuga?</p>
+            <p>“Our heart goes out for the children whose lives have been lost. Children are the most vulnerable in this desperate situation.</p>
+            <p>the immediate needs of children,” said Mr. Sheldon Yett, UNICEF Representative to Bangladesh.</p>
             <a class="link-button" href="www.google.com" target="_blank">How to Contribute?</a>
         </div>
         <div class="half-width">
@@ -83,8 +75,8 @@
         </div>
         <div class="half-width text">
             <h1>They need us to survive</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae neque repellat vel eos perspiciatis minus eaque doloremque consectetur obcaecati rem.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, fuga?</p>
+            <p>UNICEF is working to further support the Government of Bangladesh’s emergency response with millions of water purification tablets, </p>
+            <p>UNICEF is also procuring emergency medicines supplies for district health facilities.</p>
             <a class="link-button" href="www.google.com" target="_blank">How to Contribute?</a>
         </div>
     </section>
