gallery section added

--- a/index.html
+++ b/index.html
@@ -58,11 +58,35 @@
         </div>
     </section>
 
-    
+    <section class="gallery-section">
+        <h1>Some Pictures of Our Relief Activities</h1>
+        <div>
+            <div class="gallery">
+               <a target="_blank" href="images/donation10.jpg"><img src="images/donation10.jpg" alt=""></a> 
+            </div>
+            <div class="gallery">
+              <a target="_blank" href="images/donation11.jpg""><img src="images/donation11.jpg" alt=""></a>  
+            </div>
+            <div class="gallery">
+              <a target="_blank" href="images/donation7.jpg"><img src="images/donation7.jpg" alt=""></a>  
+            </div>
+        </div>
+        <div>
+            <div class="gallery">
+               <a target="_blank" href="images/donation2.jpg"><img src="images/donation2.jpg" alt=""></a> 
+            </div>
+            <div class="gallery">
+               <a target="_blank" href="images/donation0.jpg"><img src="images/donation0.jpg" alt=""></a> 
+            </div>
+            <div class="gallery">
+               <a target="_blank" href="images/donation1.jpg"><img src="images/donation1.jpg" alt=""></a> 
+            </div>
+        </div>
+    </section>
     
     <section class="updates">
         <h1>Get My Updates</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit porro quam deleniti eum eius tempore corporis earum iusto laudantium maiores.</p>
+        <p>Please give your email address if you want to get update from us and please subscribe to connect with us.</p>
         <form class="form" action="">
             <input type="email" placeholder="Email">
             <button value="Subscribe">Subscribe</button>
