gallery section updated

--- a/index.html
+++ b/index.html
@@ -57,10 +57,9 @@
             </div>
         </div>
     </section>
-
+    <h1 class="gallery-section-h1">Some Pictures of Our Relief Activities</h1>
     <section class="gallery-section">
-        <h1>Some Pictures of Our Relief Activities</h1>
-        <div>
+        <div class="gallery-part1">
             <div class="gallery">
                <a target="_blank" href="images/donation10.jpg"><img src="images/donation10.jpg" alt=""></a> 
             </div>
@@ -71,7 +70,7 @@
               <a target="_blank" href="images/donation7.jpg"><img src="images/donation7.jpg" alt=""></a>  
             </div>
         </div>
-        <div>
+        <div class="gallery-part1">
             <div class="gallery">
                <a target="_blank" href="images/donation2.jpg"><img src="images/donation2.jpg" alt=""></a> 
             </div>
