--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
        <div class="all-text">
             <h1 id="slogan1">Let's Help Those Who Are</h1>
             <h1 id="slogan2">More In Need</h1>
-            <p class="top-paragraph">Four million people, including 1.6 million children, stranded by flash floods in north-eastern Bangladesh are in urgent need of help.  <br>UNICEF is on the ground to protect children and to deliver emergency water and health supplies.</p>
+            <p class="top-paragraph">Four million people, including 1.6 million children, stranded by flash floods in north-eastern Bangladesh are in <br>UNICEF is on the ground to protect children and to deliver emergency water and health supplies.</p>
             <a class="link-button" href="www.google.com" target="_blank">Donate Now</a>
        </div>
     </section>
@@ -48,7 +48,7 @@
             <div class="card" id="card-2">
                 <img src="icons/shelter.png" alt="">
                 <h3>Shelter for a family</h3>
-                <p>In Sylhet division, 90 per cent of health facilities have been inundated, while cases of waterborne diseases continue to rise.</p>
+                <p>In Sylhet division, 90 percent of health facilities have been inundated, while cases of waterborne diseases continue to rise.</p>
             </div>
             <div class="card" id="card-3">
                 <img src="icons/Frame-1.png" alt="">
